Implements traip days data model API change.
